# verify-mcp-server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOLUTION_GUIDE.md  pyproject.toml  run.py
.github/workflows/: build.yaml
container/: Dockerfile
deploy/: deploy-appserver.sh
docs/: SETUP-INSTRUCTIONS.md
src/: __init__.py  __main__.py  auth.py  client.py  completions.py  config.py  discovery.py  keystore.py  prompts.py  resources.py  server.py  tools.py
tests/: test_sse_e2e.py  test_stdio.py
